task_2/nginx-v1-lb.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-v1
  name: nginx-v1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-v1
  type: ClusterIP
status:
  loadBalancer: {}
