task_2/nginx-v2-lb.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-v2
  name: nginx-v2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-v2
  type: ClusterIP
status:
  loadBalancer: {}
